fix: set modal, toast z-index as 3

--- a/app/components/app/addons/addons.scss
+++ b/app/components/app/addons/addons.scss
@@ -49,7 +49,7 @@
 
   .modal-fixed-container {
     position: fixed;
-    z-index: 2;
+    z-index: 3;
     top: 0;
     right: 0;
     bottom: 0;
@@ -114,7 +114,7 @@
 
 .app-toasts {
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   left: 50%;
   top: 16px;
   transform: translateX(-50%);
